--- a/assets/sass/new.scss
+++ b/assets/sass/new.scss
@@ -741,7 +741,7 @@ main {
               border-radius: 4px;
               height: 114px;
               cursor: pointer;
-
+              filter:brightness(0.9);
               @include mobile {
                 height: 51px;
               }
@@ -757,6 +757,7 @@ main {
               width: 100%;
               border-radius: 4px;
               cursor: pointer;
+              filter: brightness(0.9);
             }
           }
         }
